--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,10 @@
+*{
+  margin: 0;
+  padding:0;
+}
 body {
-  font-family: 'Arial', 'Roboto', sans-serif;
+  font-family: 'Microsoft YaHei','Arial', 'Roboto', sans-serif;
   font-size: 16px;
-
   background-color: #fff;
 }
 
@@ -11,7 +14,7 @@ body {
 .banner {
   min-height: 790px;
   padding-top: 50px;
-
+  padding-right: 50px;
   background-image: url('../img/bnr.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -89,19 +92,21 @@ body {
   background-color: #4cae4c;
 }
 
-.navbar .navbar-form {
-  margin-right: 9%;
-}
+
 
 .banner-head .logo,
 .banner-head .header-right {
   display: inline-block;
 }
+#contactWay,
+#searchGroup{
+  float: right;
 
-.banner-head .header-right {
+  padding-right:  15px;
+}
+#contactWay {
   font-size: 18px;
-
-  margin-left: 40%;
+  margin-top: 30px;
 }
 
 /*设置bannercontent中文字样式*/
@@ -116,7 +121,7 @@ body {
 }
 
 .banner .bannercontent hr {
-  width: 100px;
+  width: 120px;
   height: 2px;
   margin-left: 0;
 
